...
<!-- manual position -->
<string name="p_source_lat">Latitude</string>
<string name="p_source_lon">Longitude</string>
<string name="p_source_coord">Coordinate</string>
<!-- select your position from a map -->
<string name="p_source_from_map">Choose on map</string>
<string name="p_source_from_map_save">Save position</string>
<string name="p_source_get_last">Use last GPS position</string>
<string name="p_source_auto">Automatic Posting</string>
<string name="p_source_auto_summary">Perform periodic position posting</string>


<!-- privacy settings -->
...
